crates/tui/src/ui/snapshots/mxr_tui__ui__briefing_modal__tests__briefing_modal_loading.snap
---
source: crates/tui/src/ui/briefing_modal.rs
assertion_line: 150
expression: rendered
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"        ╭ Briefing: thread 019e…0001 ──────────────────────────────────╮        "
"        │  loading…                                                    │        "
"        │                                                              │        "
"        │  [Esc] close                                                 │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        │                                                              │        "
"        ╰──────────────────────────────────────────────────────────────╯        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
